# opennewt

./: CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  install.ps1  install.sh  pyproject.toml  validate.py
.github/workflows/: ci.yml  release.yml
dashboard/: index.html
docs/: cli-reference.md
docs/architecture/: overview.md
docs/getting-started/: quickstart.md
src/adapters/: __init__.py  base.py  discord_adapter.py  http_adapter.py  telegram_adapter.py  websocket_adapter.py
src/api/: server.py
src/axonewt/: __init__.py  agent_loop.py  cli.py  config.py  deep_research.py  prompt_builder.py  setup_wizard.py
src/axonewt/adapters/: __init__.py  discord.py  http.py  telegram.py  websocket.py
src/axonewt/evolve/: __init__.py  ab_test.py  loop.py
src/axonewt/streaming/: __init__.py  renderer.py
src/decision/: __init__.py  engine.py  matrix.py  quadrant.py
src/evolve/: __init__.py  ab_test.py  loop.py
src/healing/: __init__.py  detector.py  diagnostician.py  engine.py  healer.py  immune.py  validator.py
src/memory/: __init__.py  cache.py  context.py  engine.py  graph.py  index.py
src/perception/: __init__.py  engine.py  nociceptor.py  proprioceptor.py
src/skills/: README.md  __init__.py  marketplace.py
src/skills/code-review/: SKILL.md
src/streaming/: __init__.py  renderer.py
src/tools/: __init__.py  browser_tool.py  code_tool.py  filesystem_tool.py  github_tool.py  memory_tool.py  terminal_tool.py
